<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <!-- Titulo-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="false"
            android:hint="@string/viaje_titulo"
            android:maxLength="55"
            android:maxLines="1"
            android:minLines="1"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:phoneNumber="false"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <!-- Descripción -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_titulo">

        <EditText
            android:id="@+id/descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="@string/viaje_descripcion"
            android:maxLength="128"
            android:nestedScrollingEnabled="true"
            android:paddingBottom="16dp"
            android:paddingTop="16dp" />
    </android.support.design.widget.TextInputLayout>

    <!-- Etiqueta Fecha -->
    <TextView
        android:id="@+id/tv_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/til_descripcion"
        android:paddingTop="16dp"
        android:text="@string/viaje_fecha"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black" />

    <!-- Fecha -->
    <TextView
        android:id="@+id/fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_fecha"
        android:text="2016/02/18"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <!-- Etiqueta Categoría -->
    <TextView
        android:id="@+id/tv_categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/fecha"
        android:paddingTop="16dp"
        android:text="@string/viaje_categoria"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black" />

    <!-- Categoría -->
    <Spinner
        android:id="@+id/categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_categoria"
        android:entries="@array/categorias_viaje" />

</RelativeLayout>
