<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Primer RelativeLayout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50">

        <ImageView
            android:id="@+id/cabecera"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="28dp"
            android:layout_weight="30" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/botonEditar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:src="@mipmap/ic_edit"/>

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="48dp"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/botonEditar"
            android:text="Titulo"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

    </RelativeLayout>

    <!-- Segundo RelativeLayout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="70"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/tv_categoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fecha"
            android:text="@string/detalle_categoría"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/categoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_categoria"
            android:layout_marginBottom="16dp"
            android:text="@string/detalle_categoría"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/tv_fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/descripcion"
            android:text="@string/detalle_fecha"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_fecha"
            android:layout_marginBottom="16dp"
            android:text="@string/detalle_fecha"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/tv_desripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detalle_descripcion"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_desripcion"
            android:layout_marginBottom="16dp"
            android:text="@string/detalle_descripcion"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </RelativeLayout>
</LinearLayout>